force-app/main/default/objects/Queue__c/Queue__c.object-meta.xml
<CustomObject>
    <description>Responsavel por prover garantia de entrega para camada de integração</description>
    <label>Event Queue</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>QueueCode</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>