force-app/main/default/objects/Queue__c/fields/businessDocument__c.field-meta.xml
<CustomField>
    <fullName>businessDocument__c</fullName>
    <externalId>true</externalId>
    <label>businessDocumentNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>