force-app/main/default/objects/Queue__c/fields/businessDocumentCorrelatedNumber__c.field-meta.xml
<CustomField>
    <fullName>businessDocumentCorrelatedNumber__c</fullName>
    <label>businessDocumentCorrelatedNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>