force-app/main/default/objects/Queue__c/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <description>Event Name or Transaction Name</description>
    <label>Event Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>