force-app/main/default/objects/Queue__c/fields/ExceptionStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ExceptionStackTrace__c</fullName>
    <description>Used only for error messages, fill this field using getStackTraceString() method</description>
    <label>Exception Stack Trace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>