force-app/main/default/objects/Queue__c/fields/InternalId__c.field-meta.xml
<CustomField>
    <fullName>InternalId__c</fullName>
    <description>Internal ID from External system related to this event (used to identify original transaction from external system)</description>
    <label>Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>