force-app/main/default/objects/Queue__c/fields/parentEvent__c.field-meta.xml
<CustomField>
    <fullName>parentEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Correlated Event</description>
    <label>Parent Event</label>
    <referenceTo>Queue__c</referenceTo>
    <relationshipName>correlateds</relationshipName>
    <type>Lookup</type>
</CustomField>