force-app/main/default/objects/Queue__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <label>Receiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>