force-app/main/default/objects/Queue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>QUEUED</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>INVALID</fullName>
            </value>
            <value>
                <fullName>DONE</fullName>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <fullName>UNHANDLED</fullName>
            </value>
            <value>
                <fullName>BATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>