force-app/main/default/objects/Queue__c/fields/StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>StatusMessage__c</fullName>
    <description>Error Message from internal or external System</description>
    <label>Status Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>