force-app/main/default/objects/Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>InternalId__c</columns>
    <columns>ObjectId__c</columns>
    <columns>StatusMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>