force-app/main/default/objects/Queue__c/listViews/AllToday.listView-meta.xml
<ListView>
    <fullName>AllToday</fullName>
    <columns>NAME</columns>
    <columns>EventName__c</columns>
    <columns>Status__c</columns>
    <columns>StatusMessage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>businessDocument__c</columns>
    <columns>businessDocumentCorrelatedNumber__c</columns>
    <columns>RetryCount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Today</label>
    <language>pt_BR</language>
</ListView>